--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,11 +13,11 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://plugins.gradle.org/m2/' }
+        // maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("de.nanogiants:android-versioning:2.4.0")
+        // classpath("de.nanogiants:android-versioning:2.4.0")
     }
 }
