--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "jest",
     "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package",
     "postuninstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json",
-    "build-android": "cd android && ./gradlew assembleRelease"
+    "build-android": "cd android && ./gradlew assembleRelease",
+    "postversion": "react-native-version --never-amend"
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.30",
@@ -94,6 +95,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "4.8.4"
