--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-logs": "^5.0.1",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-paper": "^5.11.0",
+    "react-native-paper-dates": "^0.20.4",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
