--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -111,12 +111,12 @@ android {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             **/
-            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+            if (false && project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
                 signingConfig signingConfigs.release
                 minifyEnabled enableProguardInReleaseBuilds
                 proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             } else {
-                signingConfig signingConfigs.debug
+                // signingConfig signingConfigs.debug
             }
         }
     }
