--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Fetch all tags
-        run: git fetch --tags
+        run: git fetch --tags --force
 
       - name: Setup JDK
         uses: actions/setup-java@v3.12.0
