--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,8 +80,8 @@ android {
         setProperty("archivesBaseName", "OpenDTUApp")
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 3
-        versionName "0.1.6"
+        versionCode 4
+        versionName "0.1.7-0"
     }
     signingConfigs {
         debug {
