--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -125,7 +125,7 @@ android {
         abi {
             reset()
             enable true
-            universalApk false
+            universalApk true
             include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
     }
