--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,8 +80,8 @@ android {
         setProperty("archivesBaseName", "OpenDTUApp")
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 5
-        versionName "0.1.6-1"
+        versionCode 6
+        versionName "0.1.8"
     }
     signingConfigs {
         debug {
