--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install node modules
         run: |
-          yarn install
+          yarn install --frozen-lockfile --prefer-offline
 
       - name: Run Lint
         run: |
