--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           yarn lint --max-warnings=0
 
-      - name: Run test
-        run: |
-          yarn test
+      - name: Run tests
+        uses: willcaul/jest-github-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          test-command: "yarn test"
