--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,15 +12,21 @@ jobs:
       checks: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-node@master
-      - uses: c-hive/gha-yarn-cache@v1
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+
+      - name: Cache node modules
+        uses: c-hive/gha-yarn-cache@v1
 
       - name: Install node modules
         run: |
           yarn install --frozen-lockfile --prefer-offline
 
-      - name: Run Lint
+      - name: Run ESLint
         run: |
           yarn lint --max-warnings=0
 
