--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.0.1",
-    "react-native-markdown-display": "^7.0.0-alpha.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.11.2",
     "react-native-paper-dates": "^0.20.4",
     "react-native-reanimated": "^3.5.4",
