--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "typecheck": "tsc --noEmit",
     "start": "react-native start",
     "test": "jest --passWithNoTests",
     "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package",
