--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,8 +80,8 @@ android {
         setProperty("archivesBaseName", "OpenDTUApp")
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 11
-        versionName "0.1.13-0"
+        versionCode 13
+        versionName "0.1.14"
     }
     signingConfigs {
         debug {
