--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opendtu-react-native",
-  "version": "0.1.13-0",
+  "version": "0.1.14",
   "private": true,
   "repository": {
     "type": "git",
