--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@os-team/i18next-react-native-language-detector": "^1.0.30",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/netinfo": "^11.2.1",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
