--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "postuninstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json",
     "build-android": "pushd android ; ./gradlew assembleRelease ; popd",
     "postversion": "react-native-version --never-amend",
-    "prepare": "node-git-hooks"
+    "prepare": "node-git-hooks",
+    "clean:android": "pushd android ; ./gradlew clean ; popd"
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.30",
@@ -95,6 +96,7 @@
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.1",
