--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,15 @@
       "@/*": ["src/*"],
       "@root/*": ["*"],
     },
-    "types": ["react-native", "node"]
-  }
+    "types": ["react-native", "node"],
+    "skipLibCheck": true,
+  },
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js",
+    "jest.setup.js",
+    ".prettierrc.js"
+  ]
 }
