--- a/package.json
+++ b/package.json
@@ -27,85 +27,87 @@
     "clean:android": "pushd android ; ./gradlew clean ; popd"
   },
   "dependencies": {
-    "@os-team/i18next-react-native-language-detector": "^1.0.30",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@os-team/i18next-react-native-language-detector": "^1.0.33",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/art": "^1.2.0",
-    "@react-native-community/netinfo": "^11.2.1",
-    "@react-native-masked-view/masked-view": "^0.3.0",
-    "@react-navigation/bottom-tabs": "^6.5.9",
-    "@react-navigation/native": "^6.1.8",
-    "@react-navigation/native-stack": "^6.9.15",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.3",
     "base-64": "^1.0.0",
     "compare-versions": "^6.1.0",
-    "i18next": "^23.7.6",
+    "i18next": "^23.11.3",
     "intl-pluralrules": "^2.0.1",
     "ip-regex": "^5.0.0",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "node-git-hooks": "^1.0.7",
     "npm-license-crawler": "^0.2.1",
-    "octokit": "^3.1.1",
+    "octokit": "^3.2.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "prometheus-query": "^3.3.2",
+    "prometheus-query": "^3.4.0",
     "react": "18.2.0",
-    "react-i18next": "^13.4.1",
+    "react-i18next": "^14.1.1",
     "react-native": "0.72.6",
     "react-native-charts-wrapper": "^0.6.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-flex-layout": "^0.1.5",
-    "react-native-get-random-values": "^1.9.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-logs": "^5.0.1",
+    "react-native-logs": "^5.1.0",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-paper": "^5.11.2",
-    "react-native-paper-dates": "^0.20.4",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-paper-dates": "^0.22.7",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-simple-gauge": "^0.3.1",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "^15.2.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-zeroconf": "^0.13.8",
-    "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.0",
+    "styled-components": "^6.1.9",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-transform-class-static-block": "^7.23.3",
-    "@babel/plugin-transform-private-methods": "^7.23.3",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@tsconfig/react-native": "^3.0.0",
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-transform-class-static-block": "^7.24.4",
+    "@babel/plugin-transform-private-methods": "^7.24.1",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/runtime": "^7.24.5",
+    "@react-native/eslint-config": "^0.74.83",
+    "@react-native/metro-config": "^0.72.12",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@tsconfig/react-native": "^3.0.5",
     "@types/npm-license-crawler": "^0.2.3",
-    "@types/react": "^18.0.24",
-    "@types/react-native-charts-wrapper": "^0.5.9",
-    "@types/react-native-zeroconf": "^0.12.2",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.28",
-    "@types/uuid": "^9.0.6",
-    "babel-jest": "^29.2.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.19.0",
+    "@types/react": "^18.3.1",
+    "@types/react-native-charts-wrapper": "^0.5.11",
+    "@types/react-native-zeroconf": "^0.12.3",
+    "@types/react-test-renderer": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^9.0.8",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-no-relative-import-paths": "^1.5.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
+    "eslint-plugin-no-relative-import-paths": "^1.5.4",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "^3.2.5",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "18.2.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "4.8.4"
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.1.2",
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": ">=16"
