--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.33",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/art": "^1.2.0",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -50,7 +49,7 @@
     "prometheus-query": "^3.4.0",
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
-    "react-native": "0.72.6",
+    "react-native": "^0.74.1",
     "react-native-charts-wrapper": "^0.6.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-flex-layout": "^0.1.5",
@@ -82,10 +81,12 @@
     "@babel/plugin-transform-private-methods": "^7.24.1",
     "@babel/preset-env": "^7.24.5",
     "@babel/runtime": "^7.24.5",
-    "@react-native/eslint-config": "^0.74.83",
-    "@react-native/metro-config": "^0.72.12",
+    "@react-native/babel-preset": "0.74.83",
+    "@react-native/eslint-config": "0.74.83",
+    "@react-native/metro-config": "0.74.83",
+    "@react-native/typescript-config": "0.74.83",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@tsconfig/react-native": "^3.0.5",
+    "@types/markdown-it": "^14.1.1",
     "@types/npm-license-crawler": "^0.2.3",
     "@types/react": "^18.3.1",
     "@types/react-native-charts-wrapper": "^0.5.11",
@@ -101,15 +102,15 @@
     "eslint-plugin-no-relative-import-paths": "^1.5.4",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "jest": "^29.7.0",
-    "metro-react-native-babel-preset": "^0.77.0",
+    "jest": "^29.2.1",
     "prettier": "^3.2.5",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "^18.3.1",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.2",
     "typescript": "~5.3.3"
   },
   "engines": {
-    "node": ">=16"
-  }
+    "node": ">=18"
+  },
+  "packageManager": "yarn@3.6.4"
 }
