--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install node modules
         run: |
-          yarn install --immutable --immutable-cache --check-cache
+          yarn install --immutable --immutable-cache
 
       - name: Cache Gradle Wrapper
         uses: actions/cache@v3
