--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install node modules
         run: |
-          yarn install --immutable --immutable-cache --check-cache
+          yarn install --immutable --immutable-cache
 
       - name: Cache Gradle Wrapper
         uses: actions/cache@v3
