--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "octokit": "^3.2.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
+    "pretty-bytes": "^6.1.1",
     "prometheus-query": "^3.4.0",
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
@@ -53,6 +54,7 @@
     "react-native-charts-wrapper": "^0.6.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-flex-layout": "^0.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.1.0",
