--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "build-android": "pushd android ; ./gradlew assembleRelease ; popd",
     "postversion": "react-native-version --never-amend --skip-tag",
     "prepare": "node-git-hooks",
-    "clean:android": "pushd android ; ./gradlew clean ; popd"
+    "clean:android": "pushd android ; ./gradlew clean ; popd",
+    "translations:push": "pushd src/translations/translation-files ; git add . ; git commit -m 'Update translations' ; git push ; popd",
+    "translations:pull": "pushd src/translations/translation-files ; git pull ; popd"
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.33",
+    "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -37,6 +40,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "base-64": "^1.0.0",
     "compare-versions": "^6.1.0",
+    "expo": "^51.0.0",
     "i18next": "^23.11.4",
     "intl-pluralrules": "^2.0.1",
     "ip-regex": "^5.0.0",
@@ -114,5 +118,19 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@3.6.4",
+  "resolutions": {
+    "react-native-paper@^5.12.3": "patch:react-native-paper@npm%3A5.12.3#./.yarn/patches/react-native-paper-npm-5.12.3-1a888b7688.patch"
+  },
+  "expo": {
+    "autolinking": {
+      "exclude": [
+        "expo-keep-awake",
+        "expo-font",
+        "expo-asset",
+        "expo-file-system",
+        "expo-application"
+      ]
+    }
+  }
 }
