--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: write
       checks: write
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
