--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
     "test": "jest --passWithNoTests",
     "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package",
     "postuninstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json",
-    "build-android": "pushd android ; ./gradlew assembleRelease ; popd",
+    "build-android": "bash -c \"pushd android ; ./gradlew assembleRelease ; popd\"",
     "postversion": "react-native-version --never-amend --skip-tag",
     "prepare": "node-git-hooks",
-    "clean:android": "pushd android ; ./gradlew clean ; popd",
-    "translations:push": "pushd src/translations/translation-files ; git add . ; git commit -m 'Update translations' ; git push ; popd",
-    "translations:pull": "pushd src/translations/translation-files ; git pull ; popd"
+    "clean:android": "bash -c \"pushd android ; ./gradlew clean ; popd\"",
+    "translations:push": "bash -c \"pushd src/translations/translation-files ; git add . ; git commit -m 'Update translations' ; git push ; popd\"",
+    "translations:pull": "bash -c \"pushd src/translations/translation-files ; git pull ; popd\"",
+    "precommit-hooks": "bash -c \".git/hooks/pre-commit\"",
+    "fix-imports": "./fix-imports.mjs"
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.33",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -108,8 +111,9 @@
     "eslint-plugin-no-relative-import-paths": "^1.5.4",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "react-native-version": "^4.0.0",
     "react-test-renderer": "18.3.1",
     "ts-jest": "^29.1.2",
@@ -120,7 +124,8 @@
   },
   "packageManager": "yarn@3.6.4",
   "resolutions": {
-    "react-native-paper@^5.12.3": "patch:react-native-paper@npm%3A5.12.3#./.yarn/patches/react-native-paper-npm-5.12.3-1a888b7688.patch"
+    "react-native-paper@^5.12.3": "patch:react-native-paper@npm%3A5.12.3#./.yarn/patches/react-native-paper-npm-5.12.3-1a888b7688.patch",
+    "node-git-hooks@^1.0.7": "patch:node-git-hooks@npm%3A1.0.7#./.yarn/patches/node-git-hooks-npm-1.0.7-618e27eb9b.patch"
   },
   "expo": {
     "autolinking": {
