--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,13 @@
     "node": true,
     "react-native/react-native": true
   },
+  "overrides": [
+    {
+      // Test files only
+      "files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
+      "extends": ["plugin:testing-library/react"]
+    }
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:import/recommended",
