--- a/package.json
+++ b/package.json
@@ -90,11 +90,13 @@
     "@babel/plugin-transform-private-methods": "^7.24.1",
     "@babel/preset-env": "^7.24.5",
     "@babel/runtime": "^7.24.5",
-    "@react-native/babel-preset": "0.74.83",
-    "@react-native/eslint-config": "0.74.83",
-    "@react-native/metro-config": "0.74.83",
-    "@react-native/typescript-config": "0.74.83",
+    "@react-native/babel-preset": "0.74.84",
+    "@react-native/eslint-config": "0.74.84",
+    "@react-native/metro-config": "0.74.84",
+    "@react-native/typescript-config": "0.74.84",
+    "@testing-library/react-native": "^12.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jest": "^29.5.12",
     "@types/markdown-it": "^14.1.1",
     "@types/npm-license-crawler": "^0.2.3",
     "@types/react": "^18.3.2",
@@ -112,6 +114,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "react-native-version": "^4.0.0",
