--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.1.0",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "5.12.5",
     "react-native-paper-dates": "^0.22.19",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
@@ -125,11 +125,7 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4",
-  "resolutions": {
-    "react-native-paper@5.12.5": "patch:react-native-paper@npm%3A5.12.5#./.yarn/patches/react-native-paper-npm-5.12.3-1a888b7688.patch",
-    "node-git-hooks@^1.0.7": "patch:node-git-hooks@npm%3A1.0.7#./.yarn/patches/node-git-hooks-npm-1.0.7-618e27eb9b.patch"
-  },
+  "packageManager": "yarn@4.4.0",
   "expo": {
     "autolinking": {
       "exclude": [
