--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "base-64": "^1.0.0",
     "compare-versions": "^6.1.1",
     "expo": "^51.0.23",
+    "fast-deep-equal": "^3.1.3",
     "i18next": "^23.12.2",
     "intl-pluralrules": "^2.0.1",
     "ip-regex": "^5.0.0",
@@ -58,6 +59,7 @@
     "react": "18.3.1",
     "react-i18next": "^15.0.0",
     "react-native": "0.74.3",
+    "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-charts-wrapper": "^0.6.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-flex-layout": "^0.1.5",
