--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,6 +22,9 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
+# React Native Upgrade Guide says I should remove this, but when I do that, the app does not build anymore.
+android.enableJetifier=true
+
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
