--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opendtu-react-native",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "private": true,
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package",
     "postuninstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json",
     "build-android": "bash -c \"pushd android ; ./gradlew assembleRelease ; popd\"",
-    "postversion": "react-native-version --never-amend --skip-tag",
+    "postversion": "react-native-version --never-amend --skip-tag -L",
     "prepare": "node-git-hooks",
     "clean:android": "bash -c \"pushd android ; ./gradlew clean ; popd\"",
     "translations:push": "bash -c \"pushd src/translations/translation-files ; git add . ; git commit -m 'Update translations' ; git push ; popd\"",
@@ -119,7 +119,7 @@
     "eslint-plugin-testing-library": "^6.3.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "react-native-version": "^4.0.0",
+    "react-native-version": "4.0.0",
     "react-test-renderer": "18.3.1",
     "ts-jest": "^29.2.5",
     "typescript": "~5.5.4"
