--- a/package.json
+++ b/package.json
@@ -73,10 +73,12 @@
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-share": "^11.0.2",
     "react-native-simple-gauge": "^0.3.1",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.6.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-zeroconf": "^0.13.8",
