--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     },
     "types": ["react-native", "node"],
     "skipLibCheck": true,
+    "allowImportingTsExtensions": false,
   },
   "exclude": [
     "node_modules",
