--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "typecheck": "tsc --project tsconfig.json --pretty --noEmit --skipLibCheck",
     "start": "react-native start",
     "test": "jest --passWithNoTests",
-    "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package",
+    "pod:install": "(cd ios && pod install)",
+    "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package && yarn run pod:install",
     "postuninstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json",
     "build-android": "bash -c \"pushd android ; ./gradlew assembleRelease ; popd\"",
     "postversion": "react-native-version --never-amend --skip-tag -L",
@@ -61,6 +62,7 @@
     "react-native": "0.75.2",
     "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-charts-wrapper": "^0.6.0",
+    "react-native-config": "^1.5.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-flex-layout": "^0.1.5",
     "react-native-fs": "^2.20.0",
