--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "typecheck": "tsc --project tsconfig.json --pretty --noEmit --skipLibCheck",
     "start": "react-native start",
     "test": "jest --passWithNoTests",
-    "pod:install": "command -v pod && (cd ios && pod install)",
-    "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package && yarn run pod:install",
+    "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package && ./postinstall.sh",
     "postuninstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json",
     "build-android": "bash -c \"pushd android ; ./gradlew assembleRelease ; popd\"",
     "postversion": "react-native-version --never-amend --skip-tag -L",
