--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,7 +87,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: opendtu-app
-          path: android/app/build/outputs/apk/release/*.apk
+          path: |
+            android/app/build/outputs/apk/release/*.apk
+            android/app/build/generated/assets/react/release/index.android.bundle
           if-no-files-found: error
 
       # skip release creation if this is not a tag push
@@ -98,4 +100,6 @@ jobs:
         with:
           generate_release_notes: true
           prerelease: false
-          files: android/app/build/outputs/apk/release/*-signed.apk
+          files: |
+            android/app/build/outputs/apk/release/*-signed.apk
+            android/app/build/generated/assets/react/release/index.android.bundle
