--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,7 +33,13 @@ jobs:
 
       - name: Run ESLint
         run: |
-          yarn lint --max-warnings=0
+          yarn lint --max-warnings=0 --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
+
+      - name: Upload ESLint analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: eslint-results.sarif
+          wait-for-processing: true
 
       - name: Run tests
         uses: willcaul/jest-github-action@v4
