--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@babel/plugin-transform-private-methods": "^7.25.4",
     "@babel/preset-env": "^7.25.4",
     "@babel/runtime": "^7.25.6",
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@react-native/babel-preset": "0.75.3",
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
