--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "translations:push": "bash -c \"pushd src/translations/translation-files ; git add . ; git commit -m 'Update translations' ; git push ; popd\"",
     "translations:pull": "bash -c \"pushd src/translations/translation-files ; git pull ; popd\"",
     "precommit-hooks": "bash -c \".git/hooks/pre-commit\"",
-    "fix-imports": "./fix-imports.mjs"
+    "fix-imports": "./fix-imports.mjs",
+    "pod-install": "cd ios && pod install"
   },
   "dependencies": {
     "@os-team/i18next-react-native-language-detector": "^1.0.34",
@@ -69,6 +70,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.1.0",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-mmkv": "^2.12.2",
     "react-native-paper": "5.12.5",
     "react-native-paper-dates": "^0.22.26",
     "react-native-reanimated": "^3.15.5",
