--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/translations/translation-files"]
-	path = src/translations/translation-files
+	path = src/translations
 	url = ../../OpenDTU-App/opendtu-react-native-translations.git
