--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.1.0",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-mmkv": "^2.12.2",
+    "react-native-mmkv": "~2.12.2",
     "react-native-paper": "5.12.5",
     "react-native-paper-dates": "^0.22.26",
     "react-native-reanimated": "^3.15.5",
