--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@shopify/flash-list": "^1.7.1",
     "base-64": "^1.0.0",
     "compare-versions": "^6.1.1",
     "expo": "^51.0.38",
     "fast-deep-equal": "^3.1.3",
+    "fuse.js": "^7.0.0",
     "i18next": "^23.16.0",
     "intl-pluralrules": "^2.0.1",
     "ip-regex": "^5.0.0",
