--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pod-install": "cd ios && pod install"
   },
   "dependencies": {
+    "@octokit/core": "^3",
     "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
@@ -54,7 +55,6 @@
     "moment": "^2.30.1",
     "node-git-hooks": "1.0.7",
     "npm-license-crawler": "^0.2.1",
-    "octokit": "^3.2.1",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "pretty-bytes": "^6.1.1",
