Update to react-native 0.76.2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "types": ["react-native", "node"],
     "skipLibCheck": true,
     "allowImportingTsExtensions": false,
+    "resolvePackageJsonExports": true
   },
   "exclude": [
     "node_modules",
