--- a/package.json
+++ b/package.json
@@ -151,7 +151,8 @@
             ]
         }
     },
-    "overrides": {
-        "@react-native/gradle-plugin": "0.76.2"
+    "resolutions": {
+        "@react-native/gradle-plugin": "0.76.2",
+        "use-latest-callback": "0.2.3"
     }
 }
