--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Build Android
         run: |
           cd android
-          ./gradlew assembleRelease --no-daemon --info --build-cache --build-cache-key=android-release
+          ./gradlew assembleRelease --no-daemon --info --build-cache
           for f in app/build/outputs/apk/release/*-unsigned.apk; do mv "$f" "${f%-unsigned.apk}.apk"; done
 
       - name: Sign App Bundle
