Modify CI trigger

--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -5,8 +5,8 @@ on:
       - main
       - develop
   push:
-    branches-ignore:
-      - main
+    branches:
+      - develop
 
 jobs:
   android-build:
