--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/translations/translation-files"]
+[submodule "src/translations"]
 	path = src/translations
 	url = ../../OpenDTU-App/opendtu-react-native-translations.git
