--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,7 @@ updates:
       - dependency-name: "@react-native/*"
       - dependency-name: "react"
       - dependency-name: "react-test-renderer"
+      - dependency-name: "typescript"
     groups:
       production-dependencies:
         dependency-type: "production"
