--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
         "pretty-bytes": "^6.1.1",
         "prometheus-query": "^3.4.1",
         "react": "18.3.1",
+        "react-native": "0.76.5",
         "react-i18next": "^15.2.0",
-        "react-native": "0.76.2",
         "react-native-animated-bottom-drawer": "^0.0.23",
         "react-native-charts-wrapper": "^0.6.0",
         "react-native-config": "^1.5.3",
@@ -101,14 +101,15 @@
         "@babel/preset-env": "^7.26.0",
         "@babel/runtime": "^7.26.0",
         "@microsoft/eslint-formatter-sarif": "^3.1.0",
+        "@octokit/webhooks-types": "^7.6.1",
         "@react-native-community/cli": "15.1.3",
         "@react-native-community/cli-platform-android": "16.0.2",
         "@react-native-community/cli-platform-ios": "16.0.2",
-        "@react-native/babel-preset": "0.76.2",
-        "@react-native/eslint-config": "0.76.2",
-        "@react-native/gradle-plugin": "0.76.2",
-        "@react-native/metro-config": "0.76.2",
-        "@react-native/typescript-config": "0.76.2",
+        "@react-native/babel-preset": "0.76.5",
+        "@react-native/eslint-config": "0.76.5",
+        "@react-native/gradle-plugin": "0.76.5",
+        "@react-native/metro-config": "0.76.5",
+        "@react-native/typescript-config": "0.76.5",
         "@testing-library/react-native": "^12.9.0",
         "@trivago/prettier-plugin-sort-imports": "^5.2.0",
         "@types/jest": "^29.5.14",
@@ -135,7 +136,7 @@
         "react-native-version": "4.0.0",
         "react-test-renderer": "18.3.1",
         "ts-jest": "^29.2.5",
-        "typescript": "~5.7.2"
+        "typescript": "5.6.3"
     },
     "engines": {
         "node": ">=18"
@@ -153,7 +154,7 @@
         }
     },
     "resolutions": {
-        "@react-native/gradle-plugin": "0.76.2",
+        "@react-native/gradle-plugin": "0.76.5",
         "use-latest-callback": "0.2.3"
     }
 }
