First step into new bottom drawer library

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "@devvie/bottom-sheet": "^0.4.3",
+        "@gorhom/bottom-sheet": "^5.1.1",
         "@octokit/rest": "^21.1.1",
         "@os-team/i18next-react-native-language-detector": "^1.1.5",
         "@pchmn/expo-material3-theme": "^1.3.2",
@@ -68,6 +69,7 @@
         "react-native-fast-image": "^8.6.3",
         "react-native-flex-layout": "^0.1.5",
         "react-native-fs": "^2.20.0",
+        "react-native-gesture-handler": "^2.24.0",
         "react-native-get-random-values": "^1.11.0",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-localize": "^3.4.1",
