Undo what dependabot did to fix rn-cli

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,7 @@ updates:
       - dependency-name: "octokit"
       - dependency-name: "react-native"
       - dependency-name: "@react-native/*"
+      - dependency-name: "@react-native-community/*"
       - dependency-name: "react"
       - dependency-name: "react-test-renderer"
       - dependency-name: "typescript"
