Remove unused testing framework

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "lint:fix": "eslint . --fix",
         "typecheck": "tsc --project tsconfig.json --pretty --noEmit --skipLibCheck",
         "start": "react-native start",
-        "test": "jest --passWithNoTests",
+        "test": "echo 'No tests specified' && exit 0",
         "postinstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json && patch-package && ./postinstall.sh",
         "postuninstall": "yarn run npm-license-crawler -onlyDirectDependencies -json licenses.json",
         "build-android": "bash -c \"pushd android ; ./gradlew assembleRelease ; popd\"",
@@ -109,10 +109,8 @@
         "@react-native/gradle-plugin": "0.79.0",
         "@react-native/metro-config": "0.79.0",
         "@react-native/typescript-config": "0.79.5",
-        "@testing-library/react-native": "^13.2.0",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/color": "^4.2.0",
-        "@types/jest": "^29.2.1",
         "@types/markdown-it": "^14.1.2",
         "@types/npm-license-crawler": "^0.2.3",
         "@types/react": "^19.0.0",
@@ -132,11 +130,9 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "eslint-plugin-testing-library": "^7.5.3",
-        "jest": "^29.2.1",
         "prettier": "^3.6.2",
         "react-native-version": "4.0.0",
         "react-test-renderer": "19.0.0",
-        "ts-jest": "^29.4.0",
         "typescript": "^5 <5.6.0"
     },
     "engines": {
