--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "license": "gpl-3.0",
     "scripts": {
-        "android": "react-native run-android",
+        "android": "react-native run-android --active-arch-only",
         "android:release": "yarn android --mode release",
         "ios": "react-native run-ios",
         "lint": "eslint .",
